source/stylesheets/_application-custom.css.sass
/**/

.container#page-wrap
  background: #fff
  @import compass/css3
  +box-shadow(rgba(black, .1) 0 0 42px, rgba(black, .5) 0 0 3px)

  @media screen and (min-width: $screen-md)
    background: #2b2b2b

  .jumbotron
    background-image: url(/images/bg-jumbotron.png)
    background-repeat: no-repeat
    background-size: auto 100%
    background-position: -250px 100%
    border-radius: 0
    font-size: $font-size-base
    margin: 0 ($grid-gutter-width / -2)
    padding-bottom: 100px
    padding-top: 120px
    position: relative

    @media screen and (min-width: $grid-float-breakpoint)
      padding-bottom: 100px
      padding-top: 140px

    @media screen and (min-width: $screen-md)
      padding: 200px 60px 140px
      h1
        font-size: $font-size-base * 3.4285 // 48px

    a
      color: $brand-primary

      &:hover
        color:  lighten($brand-primary, 7.5%)

    .btn-default
      background: transparent
      border: 1px solid #fff
      color: #fff
      font-family: $headings-font-family
      font-size: 22px
      margin: 15px 0 0
      text-transform: uppercase

      &:hover
        color: $brand-primary

        .fa-rocket
          color: #fff

      .fa-long-arrow-right
        margin: 0 0 0 10px

      .fa-rocket
        color: $brand-primary
        margin: 0 9px 0 0
        position: relative

    .buttons
      position: relative

      &:after
        background: #fff
        content: ''
        position: absolute
        height: 2px
        left: 0
        bottom: -50px
        width: 60px

    h1
      position: relative

      @media screen and (max-width: $screen-md)
        font-size: $font-size-base * 3 // 42px

      &:after
        background: #fff
        content: ''
        left: 0
        position: absolute
        height: 2px
        top: -44px
        width: 60px

    p.lead
      font-size: $font-size-large
      font-weight: 300


#content
  background: #fff

  @media screen and (min-width: $screen-sm)
    padding-left: $grid-gutter-width
    padding-right: $grid-gutter-width
    .index & 
      padding-left: $grid-gutter-width/2
      padding-right: $grid-gutter-width/2


.featurette
  position: relative

  &:before
    border: 20px solid transparent
    border-bottom-width: 0
    border-left-width: 40px
    border-right-width: 40px
    border-top-color: #fff
    bottom: -20px
    content: ''
    left: 50%
    margin: 0 0 0 -40px
    position: absolute
    z-index: 10

  &:last-child:before
    display: none

  &:nth-child(2n)
    background: $gray-lighter

    &:before
      border-top-color: $gray-lighter

  .col-md-5, .col-md-7
    padding-right: 20px

    &:first-child
      padding-left: 20px
      padding-right: ($grid-gutter-width / 2)

  @media screen and (max-width: $grid-float-breakpoint)
    .col-md-5, .col-md-7
      padding-bottom: 40px
      padding-top: 20px

      &:first-child
        padding-bottom: 0
        padding-top: 40px

  @media screen and (min-width: $grid-float-breakpoint)
    .col-md-5, .col-md-7
      padding-bottom: 40px
      padding-right: 40px
      padding-top: 40px

      &:first-child
        padding-left: 40px

  @media screen and (min-width: $screen-md)
    .col-md-5, .col-md-7
      padding-bottom: 60px
      padding-right: 60px
      padding-top: 60px

      &:first-child
        padding-left: 60px

  h2
    margin-top: 0

#footer
  background: $gray-lighter
  font-size: $font-size-small
  padding-bottom: 20px
  padding-top: 20px
  
  @media screen and (min-width: $screen-md)
    padding-left: $grid-gutter-width
    padding-right: $grid-gutter-width

  .index &
    padding-left: 20px
    padding-right: 20px

    @media screen and (min-width: $grid-float-breakpoint)
      padding-left: 40px
      padding-right: 40px

    @media screen and (min-width: $screen-md)
      padding-left: 60px
      padding-right: 60px

#logo
  padding: 0
  margin-left: auto
  margin-right: auto

#nav-primary
  .navbar-brand
    background: url(/images/logo-horizontal.svg) no-repeat
    height: 39px
    margin-bottom: 20px
    margin-top: 20px
    padding: 0
    text-indent: -9999px
    width: 144px

    @media (min-width: $grid-float-breakpoint) and (max-width: $screen-md - 1)
      margin-left: $grid-gutter-width

      .index & 
        margin-left: $grid-gutter-width

    @media (min-width: $screen-md)
      background-image: url(/images/logo.svg)
      background-size: auto 100%
      background-position: center top
      height: 120px
      margin-bottom: 30px
      margin-top: 25px
      width: 100%


  .navbar-default
    background: transparent
    border: 0
    font-family: $headings-font-family
    margin: 0

    .nav > li
      @media (min-width: $screen-md), (max-width: $grid-float-breakpoint - 1)
        float: none

        > a
          border-bottom:  1px solid transparent
          border-top:  1px solid transparent
          padding: 5px 0 5px 36px
          position: relative

          &:before
            color: #080808
            color: rgba(0,0,0,.8)
            font-family: FontAwesome
            font-size: $font-size-base * 1.4
            left: 5px
            position: absolute
            top: 5px

          &:hover
            background: #222
            border-top-color: #191919
            border-bottom-color: #363636

            &:before
              color: $brand-primary

        &:nth-child(1) > a:before
          content: '\f135'

        &:nth-child(2) > a:before
          content: '\f0c5'
          font-size: $font-size-base * 1.3

        &:nth-child(3) > a:before
          content: '\f085'
          font-size: $font-size-base * 1.3

        &:nth-child(4) > a:before
          content: '\f09b'
          font-size: $font-size-base * 1.5

        &:nth-child(5) > a:before
          content: '\f09e'
          font-size: $font-size-base * 1.3
          margin-left: 3px

      @media (min-width: $screen-md)
        > a
          padding-left: 68px

          &:before
            left: 40px

      @media (min-width: $screen-lg)
        > a
          padding-left: 48px
          &:before
            left: 20px
      > a
        font-size: $font-size-base * 1.5

    @media screen and (max-width: $grid-float-breakpoint - 1)
      .navbar-collapse
        border-color: #000
        margin-bottom: $grid-gutter-width/4

    .navbar-toggle
      margin-top: 23px

      &:focus, &:hover
        border-color: #fff
        outline: none
        .icon-bar
          background-color: $brand-primary


  @media screen and (min-width: $screen-md)
    .navbar-collapse
      border-top: 1px solid #363636
      padding: 20px 0 0


    .navbar-nav
      float: none

    .navbar-header
      border-bottom: 1px solid #1b1b1b
      float: none

  @media (min-width: $grid-float-breakpoint) and (max-width: $screen-md - 1)
    .navbar-nav
      margin-left: 20px
      margin-top: 27px

#sidebar
  background: #2b2b2b
  @media screen and (min-width: $grid-float-breakpoint)
    padding-left: 0
    padding-right: 0

  hr
    margin-top: 20px
    margin-bottom: 20px
    padding: 0
    border: none
    border-top: 1px solid #333
    color: #222
    text-align: center

#social
  font-size: 24px
  line-height: 1
  position: absolute
  right: 40px
  text-align: center
  top: 40px

  a
    color: #6d6d6d !important

    &:hover
      text-decoration: none

  .label
    display: none

  li
    float: left
    height: 28px
    margin: 0 0 0 5px
    width: 28px

    &.facebook a:hover
      color: #46629e !important

    &.google a:hover
      color: #dd4b39 !important

    &.twitter a:hover
      color: #158eb9 !important

